--- a/Test/Untitled-1.html
+++ b/Test/Untitled-1.html
@@ -1,24 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scan</title>
-</head>
-
-<body>
-    <a-scene mindar-image="imageTargetSrc: ./targets.mind" vr-mode-ui="enabled:false" device-orientation-permission-ui-"enabled:false">
-        <a-assets>
-            <a-asset-item id="model" src= ./plane.gltf""></a-asset-item>
-        </a-assets>
-        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-        <a-entity mindar-image-target="targetIndex:0">
-            <a-gltf-model rotation="e e e" position="eee" scale="1 1 1" src="#model">/a-gltf-model>
-        </a-entity>
+  </head>
+  <body>
+    <a-scene mindar-image="imageTargetSrc: ./targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+      <a-assets>
+        <a-asset-item id="model" src="./plane.gltf"></a-asset-item>
+      </a-assets>
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+      <a-entity mindar-image-target="targetIndex: 0">
+        <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
+        <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#model">/a-glff-model>
+      </a-entity>
     </a-scene>
-</body>
-
+  </body>
 </html>
